--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="icons">
                 <a href="https://www.facebook.com/bandanaa.shah.18?mibextid=ZbWKwL" target="_blank"> <i
                         class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.facebook.com/bandanaa.shah.18?mibextid=ZbWKwL" target="_blank"> <i
+                <a href="https://www.tiktok.com/@sahbandana_11?_t=8gJZ7czwfvW&_r=1" target="_blank"> <i
                         class="fa-brands fa-tiktok"></i></a>
             </div>
         </div>
